[project]
name = "scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "streamlit>=1.45.1",
    "tld>=0.13.1",
    "tldextract>=5.3.0",
    "validators>=0.35.0",
    "webdriver-manager>=4.0.2",
]
